--- a/src/Components/Card/CartCom.module.css
+++ b/src/Components/Card/CartCom.module.css
@@ -1,5 +1,6 @@
 .bgabout {
-  background-image: url("https://demo2.wpopal.com/gamico/wp-content/uploads/2024/04/shop_br.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://demo2.wpopal.com/gamico/wp-content/uploads/2023/12/blog-bc.jpg");
   width: 100%;
   height: 700px;
   background-size: cover;
@@ -28,66 +29,47 @@
   -webkit-text-stroke-color: rgb(255, 255, 255);
   -webkit-text-stroke-width: 2px;
 }
-.shopBox {
-  font-family: "Unbounded", sans-serif;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  width: 75%;
-  column-gap: 60px;
+.cart {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 80%;
   margin: auto;
-  row-gap: 60px;
-  
+  border: 1px solid #5a5a5a;
+  margin-top: 50px;
+  border-radius: 20px;
+  font-family: "Unbounded", sans-serif;
 }
-.shopBox img {
-  width: 278px;
-  height: 278px;
+.cart img {
+  width: 200px;
+  height: 200px;
 }
-.box {
-  border-radius: 30px;
-  padding: 20px;
-  text-align: center;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-.box a {
+.cart a {
   text-decoration: none;
   color: black;
   font-weight: 500;
- 
 }
-.box a:hover{
+.cart a:hover {
   color: rgb(45, 244, 161);
 }
-.box h2 {
-  font-size: 14px;
+.cart h3{
+    color: rgb(45, 244, 161);
 }
-.box h3 {
-  color: rgb(45, 244, 161);
-  color: 16px;
+.btn3{
+    font-family: "Unbounded", sans-serif;
+    padding: 10px;
+    border-radius: 30px;
+    border: none;
 }
-.btnS {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 20px;
-}
-.btn {
-  font-family: "Anton", sans-serif;
-  font-size: 13px;
-  padding: 10px 30px;
-  background-color: black;
-  color: azure;
-  border: none;
-  border-radius: 5px;
-}
-.btn:hover {
-  background-color: rgb(45, 244, 161);
-  color: white;
+.btn3:hover{
+    color: black;
 }
 .container,
 footer {
   width: 100%;
   height: 500px;
-  transform: translateY(160px);
+  transform: translateY(140px);
   background-color: #1f2937;
   font-family: "Unbounded", sans-serif;
   overflow: hidden;
@@ -173,55 +155,13 @@ footer {
 .footerBottom span {
   color: #fff;
 }
-.filterSection {
-  display: flex;
-  justify-content: space-around;
-  margin: 20px 0;
-}
-.filters select{
+.noItem{
   font-family: "Unbounded", sans-serif;
-}
-.searchBox {
+  font-size: 30px;
   display: flex;
-  align-items: center;
-  
+  justify-content: center;
+
 }
-.searchBox input{
-  font-family: "Unbounded", sans-serif;
-}
-
-.searchBox input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.searchBox button {
-  padding: 10px;
-  margin-left: 5px;
-  background-color: #000;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.filters {
-  display: flex;
-  gap: 10px;
-}
-
-.filters select {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-
-
-
-
-
 
 @media (max-width: 800px) {
   .container {
