--- a/src/Components/Main.jsx/Intro/Intro.module.css
+++ b/src/Components/Main.jsx/Intro/Intro.module.css
@@ -1,5 +1,3 @@
-
-
 #bgphoto {
   position: relative;
   width: 100%;
@@ -9,8 +7,6 @@
   border-right-color: rgb(90, 90, 90);
   filter: brightness(90%);
 }
-
-
 
 @keyframes rotate {
   from {
@@ -25,9 +21,6 @@
   display: inline-block;
   animation: rotate 8s linear infinite;
 }
-
-
-
 .overlay {
   position: absolute;
   top: 0;
@@ -39,7 +32,6 @@
   opacity: 0.7;
   border-left-color: rgb(90, 90, 90);
   border-right-color: rgb(90, 90, 90);
- 
 }
 .content h2 {
   font-family: "Anton", sans-serif;
@@ -49,7 +41,6 @@
   top: 100px;
   left: 550px;
   color: white;
-  
 }
 .content h1 {
   font-family: "Anton", sans-serif;
@@ -76,31 +67,30 @@
   font-weight: 300;
   left: 550px;
 }
-.firstButton{
+.firstButton {
   position: absolute;
   top: 800px;
   left: 660px;
-  font-family: "Anton", sans-serif; 
+  font-family: "Anton", sans-serif;
   font-size: 16px;
- 
+
   padding: 20px 45px;
   border-radius: 7px;
   border: none;
   background-color: rgb(45, 244, 161);
-  border-bottom-right-radius: 35px ;
+  border-bottom-right-radius: 35px;
 }
-button a{
+button a {
   text-decoration: none;
   color: #000;
 }
 
-
-button:hover{
+button:hover {
   background-color: rgb(211, 231, 211);
   color: rgb(45, 244, 161);
   cursor: pointer;
 }
-.explore{
+.explore {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   justify-items: center;
@@ -112,14 +102,12 @@ button:hover{
   top: 1100px;
   width: 1479px;
 }
-.partOne{
+.partOne {
   width: 537px;
   display: flex;
   flex-direction: column;
-
- 
 }
-.partOne h3{
+.partOne h3 {
   font-size: 18px;
   font-family: inherit;
   font-weight: 400;
@@ -127,32 +115,32 @@ button:hover{
   color: #000000;
   font-family: "Unbounded", sans-serif;
 }
-.partOne p{
+.partOne p {
   font-size: 14px;
   font-family: inherit;
   font-weight: 300;
   line-height: 1.8em;
-  color: #5A5A5A;
+  color: #5a5a5a;
   font-family: "Unbounded", sans-serif;
 }
-.partOne a{
+.partOne a {
   text-decoration: none;
   font-family: "Anton", sans-serif;
   font-size: 16px;
   color: #000000;
-   height: 90px;
+  height: 90px;
 }
-.partOne a:hover{
- color: rgb(45, 244, 161);
+.partOne a:hover {
+  color: rgb(45, 244, 161);
 }
-.img3{
-   border-radius: 20px;
+.img3 {
+  border-radius: 20px;
 }
-.partTwo{
- position: relative;
+.partTwo {
+  position: relative;
 }
 
-.headline p{
+.headline p {
   font-family: "Anton", sans-serif;
   font-size: 140px;
   font-weight: 400;
@@ -162,14 +150,14 @@ button:hover{
   color: #000000;
   margin: 0;
 }
-.headline h1{
+.headline h1 {
   font-family: "Anton", sans-serif;
   font-size: 140px;
   font-weight: 400;
   position: absolute;
   bottom: 560px;
   right: 300px;
-   clear: both;
+  clear: both;
   color: rgba(255, 255, 255, 0);
   overflow-wrap: break-word;
   stroke: rgb(19, 18, 18);
@@ -180,35 +168,34 @@ button:hover{
   margin: 0;
   z-index: 9999;
 }
-.img4{
+.img4 {
   margin-top: 200px;
   border-radius: 20px;
   position: relative;
 }
-.img5{
-position: absolute;
-left: 250px;
-top: 120px;
-z-index: 9999;
+.img5 {
+  position: absolute;
+  left: 250px;
+  top: 120px;
+  z-index: 9999;
 }
-.partTwo h3{
+.partTwo h3 {
   font-family: "Anton", sans-serif;
   font-size: 24px;
   color: #000000;
   margin: 0;
 }
 
-.photos img{
+.photos img {
   margin-left: -20px;
   border-radius: 50%;
   border: 2px solid #fff;
 }
-.photos{
+.photos {
   display: flex;
   align-items: center;
-  
 }
-.photos a{
+.photos a {
   text-decoration: none;
   font-family: "Anton", sans-serif;
   color: #000000;
@@ -216,87 +203,74 @@ z-index: 9999;
   padding: 20px 50px;
   border-radius: 30px;
 }
-.photos a:hover{
+.photos a:hover {
   color: rgb(45, 244, 161);
   background-color: #000000;
   transition: all 0.3s;
 }
 
-
-
-
-
-
-
-
-
-
-
-
 @media (max-width: 800px) {
-  .explore{
+  .explore {
     width: 1498px;
   }
-  .overlay{
+  .overlay {
     width: 1540px;
     display: flex;
     justify-content: space-between;
   }
-  #bgphoto{
-     width: 1530px;
+  #bgphoto {
+    width: 1530px;
   }
-  .content h2{
+  .content h2 {
     font-size: 190px;
     left: 570px;
   }
-  .content h1{
+  .content h1 {
     font-size: 170px;
     width: 100%;
     left: 380px;
   }
-  .content h3{
+  .content h3 {
     width: 100%;
     left: 400px;
     font-size: 30px;
     margin: 0;
     font-weight: 700;
   }
-  button{
+  button {
     font-size: 30px;
     width: 400px;
     padding: 30px;
     left: 550px;
   }
-  button a{
-    text-decoration: none;
-  }
+ 
 }
-@media (max-width: 500px){
-  .overlay{
+@media (max-width: 500px) {
+  .overlay {
     width: 1540px;
     display: flex;
     justify-content: space-between;
   }
-  #bgphoto{
-     width: 1540px;
+  #bgphoto {
+    width: 1540px;
   }
-  .content h2{
+  .content h2 {
     font-size: 200px;
     left: 560px;
   }
-  .content h1{
+  .content h1 {
     font-size: 200px;
     width: 1200px;
     left: 290px;
   }
-  .content h3{
+  .content h3 {
     width: 900px;
     left: 380px;
     font-size: 30px;
     margin: 0;
     font-weight: 700;
   }
-  button{
+  button {
     font-size: 50px;
     width: 400px;
     padding: 30px;
