--- a/src/Components/Team/TeamCom.module.css
+++ b/src/Components/Team/TeamCom.module.css
@@ -39,9 +39,9 @@
 .allTeam img {
   border-radius: 20px;
 }
-.header{
-    font-family: "Anton", sans-serif;
-    margin-left: 20px;
+.header {
+  font-family: "Anton", sans-serif;
+  margin-left: 20px;
 }
 .header a {
   margin: 0;
@@ -52,7 +52,105 @@
 .header h3 {
   margin: 0;
   font-size: 18px;
-  color: #A3A3A3;
+  color: #a3a3a3;
   font-weight: 200;
-  
+}
+.container,
+footer {
+  width: 100%;
+  height: 500px;
+  margin-top: 50px;
+  background-color: #1f2937;
+  font-family: "Unbounded", sans-serif;
+  overflow: hidden;
+  box-sizing: border-box;
+  padding: 50px;
+}
+.footerLinks {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.footerLinks h5 {
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+}
+.footerLinks a {
+  text-decoration: none;
+  color: #a3a3a3;
+}
+.flexContainer {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+}
+.footerContact h5 {
+  margin-bottom: 50px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+}
+.footerContact p {
+  color: #a3a3a3;
+}
+.qamico {
+  margin-top: 15px;
+}
+.qamico p {
+  color: #a3a3a3;
+  font-size: 14px;
+  margin-bottom: 40px;
+  margin-top: 30px;
+}
+.qamico span {
+  color: #a3a3a3;
+  font-size: 14px;
+}
+.qamico i {
+  color: rgb(45, 244, 161);
+  font-size: 30px;
+}
+.location {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.footerBottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 4rem;
+  border-top: 1px solid #e5e7eb;
+  padding-top: 1rem;
+  position: relative;
+}
+.footerBottom img {
+  position: absolute;
+  left: 600px;
+}
+.socialIcons {
+  display: flex;
+  gap: 1rem;
+}
+.icon {
+  color: #6b7280;
+  text-decoration: none;
+}
+.icon:hover {
+  color: #fff;
+}
+.footerBottom span {
+  color: #fff;
+}
+
+@media (max-width: 800px) {
+  .container {
+    width: 1540px;
+  }
+  .bgabout{
+    width: 1540px;
+  }
 }
