--- a/src/Components/AdminPanel/Admin.module.css
+++ b/src/Components/AdminPanel/Admin.module.css
@@ -1,20 +1,28 @@
 .adminHead {
   font-family: "Anton", sans-serif;
-
-  background-color: black;
-  text-align: center;
   color: white;
-  width: 100%;
   font-weight: 300;
+  padding-left: 40px;
+}
+.add {
+  display: flex;
+  flex-direction: row;
+  background-color: black;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+
 }
 .ul {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   margin-top: 60px;
   justify-items: center;
+  align-items: center;
+  row-gap: 50px;
 }
 .ul li {
-  width: 450px;
+  width: 390px;
   border: 1px solid #5a5a5a;
   padding: 20px;
   border-radius: 20px;
@@ -54,4 +62,17 @@
   border: none;
   border-radius: 10px;
   padding: 9px 20px;
+}
+.toggleButton {
+  height: 40px;
+  width: 200px;
+  margin-right: 50px;
+  font-family: "Anton", sans-serif;
+  border: none;
+}
+
+.toggleButton:hover {
+ background-color: rgb(159, 211, 159);
+ color: black;
+ transition: all .3s;
 }
