--- a/src/Components/Contact/Contactcom.module.css
+++ b/src/Components/Contact/Contactcom.module.css
@@ -86,7 +86,7 @@
   row-gap: 20px;
   column-gap: 80px;
 }
-.submit {
+.submit2 {
   width: 150px;
   height: 50px;
   position: absolute;
@@ -98,7 +98,7 @@
   border-radius: 5px;
   cursor: pointer;
 }
-.submit:hover {
+.submit2:hover {
   background-color: black;
   color: white;
 }
@@ -145,4 +145,67 @@
   color: #a3a3a3;
   font-size: 15px;
   font-weight: 400;
+}
+@media (max-width: 800px) {
+  .bgabout {
+    width: 1540px;
+  }
+  .contact {
+    width: 1540px;
+  }
+  .office {
+    position: absolute;
+    width: 400px;
+    left: 900px;
+  }
+  .input ::placeholder {
+    font-size: 25px;
+  }
+  .text ::placeholder {
+    font-size: 25px;
+  }
+  .office {
+    font-size: 20px;
+  }
+  .image1 h3 {
+    font-size: 25px;
+  }
+  .image1 h4 {
+    font-size: 25px;
+  }
+}
+@media (max-width: 500px) {
+  .submit2 {
+    position: absolute;
+    top: 670px;
+    left: 0;
+    font-size: 30px;
+    height: 50px;
+    padding: 0;
+  }
+  .form p {
+    font-size: 60px;
+  }
+  .support {
+    margin-top: 50px;
+  }
+  .image1 {
+    padding: 15px;
+    margin-left: 30px;
+  }
+  .image1 h3 {
+    font-size: 20px;
+  }
+  .image1 h4 {
+    font-size: 25px;
+  }
+  .input ::placeholder {
+    font-size: 25px;
+  }
+  .text ::placeholder {
+    font-size: 30px;
+  }
+  .office {
+    font-size: 20px;
+  }
 }
