--- a/src/Components/AdminPanel/Admin.module.css
+++ b/src/Components/AdminPanel/Admin.module.css
@@ -11,7 +11,6 @@
   width: 100%;
   align-items: center;
   justify-content: space-between;
-
 }
 .ul {
   display: grid;
@@ -70,9 +69,16 @@
   font-family: "Anton", sans-serif;
   border: none;
 }
-
 .toggleButton:hover {
- background-color: rgb(159, 211, 159);
- color: black;
- transition: all .3s;
+  background-color: rgb(159, 211, 159);
+  color: black;
+  transition: all 0.3s;
+}
+.inputs {
+  width: 500px;
+  border: 1px solid black;
+  padding: 10px;
+  margin-left: 30px;
+  margin-top: 30px;
+  border-radius: 20px;
 }
